# BC1

./: start.bat
retail-roi-python-project/: .env.example  .gitignore  Makefile  README.md  app.py  db_manager.py  exec_roi.bat  init_streamlit.sh  main.py  pyproject.toml  requirements.txt  run_local.bat  run_local.sh  setup_db.py  style.css
retail-roi-python-project/src/retail_roi_model/: __init__.py  cli.py  engine.py
retail-roi-python-project/src/retail_roi_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
retail-roi-python-project/tests/: test_finance_helpers.py
