[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-roi-model"
version = "0.1.0"
description = "Workbook-driven Python ROI engine for Oracle Retail financial models"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "OpenAI Assistant"}
]
dependencies = [
  "openpyxl>=3.1.2,<4.0.0",
  "streamlit>=1.44.0,<2.0.0",
  "python-pptx>=1.0.0",
  "matplotlib>=3.8.0",
  "plotly>=5.20.0"
]

[project.scripts]
retail-roi = "retail_roi_model.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
